Fix alignment of vertical slideshow images
Not all of the vertical images were being center aligned because I had
reset the `figure`s to `max-width: 100%` instead of `width: 100%`, so
the images were centered in their containers but the containers weren’t
centered. Also fixed odd extra padding on first image - there’s
probably a reason it was set up that way though.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -166,18 +166,24 @@ div.bss-slides {
 }
 
 div.bss-slides figure {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     text-align: center;
 }
 
+.bss-slides figure:first-child {
+    /* overrides simple-slideshow-styles.css, but it may have been there for a reason */
+    padding: 20px 20px 0 0;
+}
 
 .bss-slides figure img{
     max-height: 400px;
+    max-width: 100%;
 }
 
 .bss-slides figcaption {
     background: rgba(0,0,0, .4);
+    text-align: left;
 }
 
 
